<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.cxy</groupId>
	<artifactId>redisclient</artifactId>
	<version>${redisclient.version}</version>
	<packaging>jar</packaging>

	<name>redisclient</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<junit.version>3.8.1</junit.version>
		<eclipse.jface.version>3.3.0-I20070606-0010</eclipse.jface.version>
		<jedis.version>3.7.0</jedis.version>
		<slf4j.log4j.version>1.7.2</slf4j.log4j.version>
		<gson.version>2.3</gson.version>
		<dom4j.version>1.6.1</dom4j.version>
		<maven.compiler.source>8</maven.compiler.source>
		<maven.compiler.target>8</maven.compiler.target>
	</properties>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>${swt.groupId}</groupId>
			<artifactId>${swt.artifactId}</artifactId>
			<version>${swt.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse</groupId>
			<artifactId>jface</artifactId>
			<version>${eclipse.jface.version}</version>
		</dependency>
		<dependency>
			<groupId>redis.clients</groupId>
			<artifactId>jedis</artifactId>
			<version>${jedis.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>${slf4j.log4j.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>${gson.version}</version>
		</dependency>
		<dependency>
			<groupId>dom4j</groupId>
			<artifactId>dom4j</artifactId>
			<version>${dom4j.version}</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.4.2</version>
				<configuration>
					<skipTests>true</skipTests>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<appendAssemblyId>false</appendAssemblyId>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
					<archive>
						<manifest>
							<mainClass>com.cxy.redisclient.presentation.RedisClient</mainClass>
						</manifest>
					</archive>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>assembly</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>8</source>
					<target>8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>win32</id>
			<properties>
				<redisclient.version>win32.x86.2.0</redisclient.version>
				<swt.version>4.3</swt.version>
				<swt.artifactId>org.eclipse.swt.win32.win32.x86</swt.artifactId>
				<swt.groupId>org.eclipse.swt.org.eclipse.swt.win32.win32.x86.4.3.swt</swt.groupId>

			</properties>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
		</profile>
		<profile>
			<id>win64</id>
			<properties>
				<redisclient.version>win32.x86_64.2.0</redisclient.version>
				<swt.version>4.3</swt.version>
				<swt.artifactId>org.eclipse.swt.win32.win32.x86_64</swt.artifactId>
				<swt.groupId>org.eclipse.swt.org.eclipse.swt.win32.win32.x86_64.4.3.swt</swt.groupId>
			</properties>
		</profile>

		<profile>
			<id>linux.x86_64</id>
			<properties>
				<redisclient.version>linux.x86_64.2.0</redisclient.version>
				<swt.version>4.3</swt.version>
				<swt.artifactId>org.eclipse.swt.gtk.linux.x86_64</swt.artifactId>
				<swt.groupId>org.eclipse.swt</swt.groupId>

			</properties>
		</profile>
		<profile>
			<id>linux.x86</id>
			<properties>
				<redisclient.version>linux.x86.2.0</redisclient.version>
				<swt.version>4.3</swt.version>
				<swt.artifactId>org.eclipse.swt.gtk.linux.x86</swt.artifactId>
				<swt.groupId>org.eclipse.swt</swt.groupId>

			</properties>
		</profile>
		<profile>
			<id>osx</id>
			<properties>
				<redisclient.version>osx.2.0</redisclient.version>
				<swt.version>4.3</swt.version>
				<swt.artifactId>org.eclipse.swt.cocoa.macosx.x86_64</swt.artifactId>
				<swt.groupId>org.eclipse.swt</swt.groupId>

			</properties>
		</profile>
	</profiles>

</project>
